package org.dsu.multiplegames.exampleinterface.mathoperations;

import org.dsu.multiplegames.exampleinterface.mathoperations.substract.Substractor;
import org.dsu.multiplegames.exampleinterface.mathoperations.sum.Adder;

public interface MathSolver extends Adder, Substractor{
    void processResult(int result);
}
