package org.dsu.multiplegames.exampleinterface.mathoperations.sum;

public interface Adder {
    int getIntAdd();
}
