@startuml

package exampleinterface{

    class ExampleInterface{
        +executeOperation(Operation operation)
    }

    package player{
        class Player{

        }
    }

    package mathoperations{
        abstract Operation{
            +{abstract}obtainValues()
            +{abstract}executeOperation()
            +{abstract}printResult()
            +{abstract}setSolver(MathSolver solver)
        }

        interface MathSolver{

        }

        package sum{
            interface Adder{
                +getIntAdd():int
            }

            class Sum{
                -Adder adder
                -int value1
                -int value2
                -int result
            }
            
            Sum *-- Adder
        }

        package substract{
            interface Substractor{
                +getIntSubstract():int
            }

            class Substract{
                -Substractor substractor
                -int value1
                -int value2
                -int result
            }
            
            Substract *-- Substractor
        }

        Sum -up-|> Operation
        Substract -up-|> Operation
        Operation ..> MathSolver
    }

    Player ..|> MathSolver

    MathSolver .up.|> Substractor
    MathSolver .up.|> Adder

    ExampleInterface --> Operation
    ExampleInterface --> Sum
    ExampleInterface --> Substract
    ExampleInterface --> Player
}


@enduml